fixed nav overlap issue

--- a/app/assets/stylesheets/pages/_optimal.scss
+++ b/app/assets/stylesheets/pages/_optimal.scss
@@ -38,6 +38,11 @@ align-items: center;
   margin-right: 24px;
 }
 
+
+.conditions {
+
+}
+
 .percent-result{
   margin-top: auto;
   margin-bottom: auto;
@@ -72,8 +77,7 @@ align-items: center;
 
 .image-description{
   position: absolute;
-  right: 0px;
-  left: 0px;
+  right: 21px;
   top: 400px;
 }
 
